# Compiler-for-the-Decaf-Language

./: .gitignore  CMakeLists.txt  README.md  build.sh  parser_test.sh  run.sh  run_test.sh  semantics_test.sh  test_codegen.sh
cmake-build/src/: DecafCompiler
src/: CMakeLists.txt  DecafLexer.g4  main.cpp
src/CodeGenerator/: Assembler.h  CFG.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  CommonSubexpressionElimination.h  Common_Subexpression_Elimination.h  ConstantFolding.h  CopyPropagation.h  DeadCodeElimination.h  Linear.h  LinearBuilder.cpp  LinearBuilder.h  LinearPrinter.h  Utils.h  preprocess.h
src/DataFlowAnalysis/: AvailableCopyAssignment.h  AvailableExpressions.h  CFG.cpp  CFG.h  CMakeLists.txt  DataFlowAnalysis.h  Liveness.h  ReachingDefinitions.h
src/DecafGrammar/: CMakeLists.txt  DecafAST.h  DecafASTBuilder.cpp  DecafASTBuilder.h  DecafASTVisitor.h  DecafLexer.g4  DecafParser.g4  DecafPrettyPrinter.cpp  DecafPrettyPrinter.h
src/RegisterAllocator/: CMakeLists.txt  RegisterAllocator.cpp  RegisterAllocator.h
src/parser/: CMakeLists.txt  parser.cpp  parser.h
src/scanner/: CMakeLists.txt  scanner.cpp  scanner.h
src/semantics/: CMakeLists.txt  Scope.h  semantics.cpp  semantics.h
src/utils/: CMakeLists.txt  cli.cpp  cli.h
tests/phase1-scanner/private/: README.md
